--- a/.i3/i3blocks.conf
+++ b/.i3/i3blocks.conf
@@ -9,11 +9,11 @@ interval=1
 #signal=10
 command=/usr/share/i3blocks/volume 5 pulse
 
-[iface]
+#[iface]
 #instance=wlan0
-color=#00FF00
-interval=10
-separator=false
+#color=#00FF00
+#interval=10
+#separator=false
 
 [wifi]
 #instance=wlp3s0
