--- a/.i3/i3blocks.conf
+++ b/.i3/i3blocks.conf
@@ -3,20 +3,23 @@ separator_block_width=15
 markup=none
 
 [volume]
-label=♪
+#label=♪
+label=
 instance=Master
 interval=1
 #signal=10
 command=/usr/share/i3blocks/volume 5 pulse
 
-#[iface]
-#instance=wlan0
-#color=#00FF00
-#interval=10
-#separator=false
+[iface]
+label=
+instance=wlan0
+color=#00FF00
+interval=10
+separator=false
 
 [wifi]
-#instance=wlp3s0
+label=
+instance=wlp3s0
 interval=10
 separator=false
 
@@ -25,7 +28,7 @@ separator=false
 interval=5
 
 [cpu_usage]
-label=CPU
+label=
 interval=10
 min_width=CPU: 100.00%
 
@@ -36,10 +39,12 @@ min_width=CPU: 100.00%
 
 
 [battery]
-label=⚡
+#label=⚡
+label=
 interval=30
 
 [time]
+label=
 command=date '+%d-%m-%Y %H:%M:%S'
 interval=5
 
