--- a/.i3/i3status.conf
+++ b/.i3/i3status.conf
@@ -1,55 +1,37 @@
+# i3status configuration file.
+# see "man i3status" for documentation.
+
+# It is important that this file is edited as UTF-8.
+# The following line should contain a sharp s:
+# ß
+# If the above line is not correctly displayed, fix your editor first!
+
 general {
-    output_format = "i3bar"
-        colors = false
-        markup = pango
-        interval = 1
+        colors = true
+        interval = 5
 }
 
-order += "cpu_temperature 0"
-order += "load"
-order += "disk /"
-order += "battery 0"
-order += "ethernet eth0"
-order += "volume master"
+#order += "wireless _first_"
+order += "battery all"
 order += "tztime local"
 
-cpu_temperature 0 {
-    format = "<span background='#ff5555'>  </span><span background='#e5e9f0'> %degrees °C </span>"
-        path = "/sys/class/thermal/thermal_zone0/temp"
+wireless _first_ {
+        format_up = " %quality %essid"
+        format_down = "W: down"
 }
 
-load {
-    format = "<span background='#50fa7b'>  </span><span background='#e5e9f0'> %5min Load </span>"
-}
-
-battery 0 {
-    format = "<span background='#DAF7A6'> </span><span background='#e5e9f0'> %percentage </span>"
-        status_chr = "⚡CHR"
-        status_bat = "🔋 BAT"
-        status_unk = "? UNK"
-        status_full = "☻ FULL"
-        path = "/sys/class/power_supply/BAT%d/uevent"
-        low_threshold = 10
-}
-
-disk "/" {
-    format = "<span background='#f1fa8c'>  </span><span background='#e5e9f0'> %free Free </span>"
-}
-
-ethernet eth0 {
-    format_up = "<span background='#bd93f9'>  </span><span background='#e5e9f0'> E: %ip (%speed) </span>"
-        format_down = "<span background='#bd93f9'>  </span><span background='#e5e9f0'> E: down </span>"
-}
-
-volume master {
-    format = "<span background='#ff79c6'>  </span><span background='#e5e9f0'> %volume </span>"
-        format_muted = "<span background='#ff79c6'>  </span><span background='#e5e9f0'> Muted </span>"
-        device = "default"
-        mixer = "Master"
-        mixer_idx = 0
+battery all {
+        format = "   %percentage "
 }
 
 tztime local {
-    format = "<span background='#8be9fd'>  </span><span background='#e5e9f0'> %time </span>"
-        format_time = "%a %-d %b %H:%M"
+        format = "   %Y-%m-%d %H:%M"
+}
+
+load {
+        format = "%1min"
+}
+
+disk "/" {
+        format = "%avail"
 }
