--- a/.i3/i3blocks.conf
+++ b/.i3/i3blocks.conf
@@ -3,7 +3,6 @@ separator_block_width=15
 markup=none
 
 [volume]
-#label=♪
 label=
 instance=Master
 interval=1
@@ -17,14 +16,16 @@ color=#00FF00
 interval=10
 separator=false
 
-[wifi]
-label=
-instance=wlp3s0
-interval=10
-separator=false
+[temperature]
+label=
+interval=1
+
+[disk]
+label=
+interval=50
 
 [bandwidth]
-#instance=eth0
+label=
 interval=5
 
 [cpu_usage]
@@ -32,14 +33,7 @@ label=
 interval=10
 min_width=CPU: 100.00%
 
-#[history]
-#label=COM
-#command=tail -1 ~/.zsh_history | grep -o -E ';[[:print:]]*' 
-#interval=repeat
-
-
 [battery]
-#label=⚡
 label=
 interval=30
 
